<option> label attribute updates are not shown until focus is moved https://bugs.webkit.org/show_bug.cgi?id=258862

Reviewed by Tim Nguyen.

HTMLOptionElement::label updates from JavaScript were not rendered on parent
<select> element, unless focus was moved to/from it. This change informs the
HTMLSelectElement about <option> child update whenever the label attribute
changes, which allows it to render the updated label.

* LayoutTests/TestExpectations:
* Source/WebCore/html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::attributeChanged):

Canonical link: https://commits.webkit.org/265942@main