Source/WebCore/html/HTMLOptionElement.cpp
@@ -189,6 +189,11 @@ void HTMLOptionElement::attributeChanged(const QualifiedName& name, const AtomSt
             setSelected(!newValue.isNull());
         break;
     }
+    case AttributeNames::labelAttr: {
+        if (RefPtr select = ownerSelectElement())
+            select->optionElementChildrenChanged();
+        break;
+    }
 #if ENABLE(DATALIST_ELEMENT)
     case AttributeNames::valueAttr:
         for (auto& dataList : ancestorsOfType<HTMLDataListElement>(*this))
